# ingestion-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
app/: worker.py
app/clients/: __init__.py  alloydb_client.py  base.py  minio_client.py  mixedbread_client.py  nats_client.py  openai_client.py  qdrant_client.py  scylla_client.py  temporal_client.py
app/core/: constants.py  dependencies.py  enums.py  logger.py  minio.py  settings.py  temporal.py
app/database/: __init__.py  alloydb.py  scylla.py
app/models/: api.py  ingestion.py  workflows.py
app/repositories/: ingestion.py
app/routes/: ingestion.py  jobs.py  jobs_ws.py
app/service/: __init__.py  ingestion.py  ingestion_service.py  scylla.py
app/temporal/: activities.py  workflows.py
demo/: playground.py
docs/: brainstorm-new-features.md  scylladb-connection.md  websocket-job-updates.md
