[project]
name = "ingestion-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.49",
    "docling>=2.73.1",
    "fastapi[standard]>=0.129.0",
    "huggingface-hub[hf-xet]>=0.36.2",
    "llama-index-core>=0.14.14",
    "llama-index-embeddings-openai>=0.5.1",
    "llama-index-llms-openai>=0.6.18",
    "llama-index-vector-stores-qdrant>=0.9.1",
    "minio>=7.2.20",
    "mixedbread>=0.46.0",
    "openai>=2.21.0",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "qdrant-client>=1.16.2",
    "scyllapy>=1.8.0",
    "temporalio>=1.22.0",
    "torch>=2.5.1",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]

[tool.uv]
extra-index-url = [
    "https://pypi.org/simple"
]

[tool.uv.sources]
torch = [
    { index = "torch-gpu", marker = "platform_system == 'Windows'"},
]

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
