[project]
name = "ingestion-service"
version = "0.1.0"
description = "Document ingestion and vector embedding pipeline"
readme = "README.md"
requires-python = ">=3.14"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
extra-index-url = [
    "https://pypi.org/simple"
]

[tool.uv.sources]
torch = [
    { index = "torch-gpu", marker = "platform_system == 'Windows'"},
]

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["shared", "api", "worker"]
